# LabFinalCse3206

./: CMakeLists.txt
src/: Student  Student.cpp  Student.h
test/: test.cpp
